Fix upper gap and unevenness of the RES #RESShortcutsEditContainer

--- a/Naut CSS.css
+++ b/Naut CSS.css
@@ -2005,7 +2005,7 @@
 			}
 		
 			#RESShortcutsEditContainer {
-				top: 1px !important;
+				height: 18px;
 				background-color: #2d2d2d !important;
 			}
 		
